Fix: Collapsed Topics conflict in alternative colours.

--- a/less/essential-alternative.less
+++ b/less/essential-alternative.less
@@ -748,6 +748,14 @@
                 }
             }
 
+            // Collapsed Topics.
+            .course-content ul.ctopics li.section .content .toggle a h3 {
+                color: inherit;
+                &:hover {
+                    color: inherit;
+                }
+            }
+
             @media (max-width: @navbarCollapseWidth) {
                 .essential-colours-alternative@{index} {
                     .nav-collapse {
